--- a/template.yaml
+++ b/template.yaml
@@ -201,7 +201,7 @@ spec:
       name: create azure repo
       action: publish:azure
       input:
-        repoUrl: https://${{ parameters.orgName }}@dev.azure.com/${{ parameters.orgName }}/Developer%20Hub%20Demo/_git/${{ parameters.repoName }}     
+        repoUrl: dev.azure.com/${{ parameters.orgName }}/Developer%20Hub%20Demo/_git/${{ parameters.repoName }}     
         description: ${{ parameters.description }}
         defaultBranch: main
     # - id: publish
