--- a/templates/github/spring-boot-backend/skeleton/azure-pipelines.yaml
+++ b/templates/github/spring-boot-backend/skeleton/azure-pipelines.yaml
@@ -3,7 +3,7 @@
 # Add steps that analyze code, save build artifacts, deploy, and more:
 # https://docs.microsoft.com/azure/devops/pipelines/languages/java
 
-name: azure-pipeline-${{ values.repoName }}
+name: azure-${{ values.repoName }}-pipeline
 
 trigger:
 - main
