Added Argo Resources

--- a/templates/github/spring-boot-backend/manifests/argocd/${{values.component_id}}-argocd-repo.yaml
+++ b/templates/github/spring-boot-backend/manifests/argocd/${{values.component_id}}-argocd-repo.yaml
@@ -8,3 +8,5 @@ metadata:
     argocd.argoproj.io/secret-type: repository
 stringData:
   url: ${{ values.destination }}
+  type: git
+  password: ${{ values.token }}
