--- a/templates/github/spring-boot-backend/template.yaml
+++ b/templates/github/spring-boot-backend/template.yaml
@@ -89,11 +89,11 @@ spec:
     - title: Provide information about the CI method
       required:
         - ci
-        - token
+        # - token
       properties:
-        token:
-          title: Azure Personal Access Token to Connect to Repo
-          type: string     
+        # token:
+        #   title: Azure Personal Access Token to Connect to Repo
+        #   type: string     
         ci:
           title: Select a CI method
           type: string
