--- a/skeletons/catalog-info/catalog-info.yaml
+++ b/skeletons/catalog-info/catalog-info.yaml
@@ -44,10 +44,10 @@ metadata:
     quay.io/repository-slug: ${{ values.imageOrganization }}/${{ values.imageName }}
     {%- endif %}
   links:
-    - url: https://devspaces${{ values.clusterDomainUrl }}/#https://${{ values.sourceControl }}/${{ values.orgName }}/${{ values.repoName }}
+    - url: https://devspaces.apps.cluster-bhtt8.sandbox1712.opentlc.com/#https://anattama@dev.azure.com/anattama/Developer%20Hub%20Demo/_git/${{ values.repoName }}
       title: OpenShift Dev Spaces (VS Code editor)
       icon: web
-    - url: https://${{ values.repoName }}-${{ values.repoName }}-dev${{ values.clusterDomainUrl }}/api/hello
+    - url: https://${{ values.repoName }}-${{ values.repoName }}-dev.apps.cluster-bhtt8.sandbox1712.opentlc.com/api/hello
       title: Application
       icon: web  
   tags:
