--- a/templates/github/spring-boot-backend/manifests/helm/app/templates/deployment.yaml
+++ b/templates/github/spring-boot-backend/manifests/helm/app/templates/deployment.yaml
@@ -19,6 +19,8 @@ spec:
         {{- toYaml . | nindent 8 }}
       {{- end }}
       labels:
+        app: ${{ values.component_id }}
+        version: v1
         {{- include "backstage.labels" . | nindent 8 }}
         {{- include "springboot-template.selectorLabels" . | nindent 8 }}
     spec:
