added servicemesh configs

--- a/templates/github/spring-boot-backend/manifests/helm/app/templates/servicemesh/servicemeshmember.yaml
+++ b/templates/github/spring-boot-backend/manifests/helm/app/templates/servicemesh/servicemeshmember.yaml
@@ -2,7 +2,7 @@ apiVersion: maistra.io/v1
 kind: ServiceMeshMember
 metadata:
   name: default
-  namespace: ${{ values.component_id }}-dev
+  namespace:  {{ .Values.namespace.name }}
 spec:
   controlPlaneRef:
     name: basic-control-plane
