--- a/templates/github/spring-boot-backend/manifests/helm/app/templates/servicemesh/destinationrule.yaml
+++ b/templates/github/spring-boot-backend/manifests/helm/app/templates/servicemesh/destinationrule.yaml
@@ -2,10 +2,11 @@ kind: DestinationRule
 apiVersion: networking.istio.io/v1beta1
 metadata:
   name: ${{ values.component_id }}-dr
-  namespace: ${{ values.component_id }}-dev
+  namespace: "{{ .Values.namespace.name }}"
 spec:
   host: ${{ values.component_id }}
   subsets:
     - name: v1
       labels:
         version: v1
+status: {}
