--- a/templates/github/spring-boot-backend/manifests/helm/app/templates/servicemesh/gateway.yaml
+++ b/templates/github/spring-boot-backend/manifests/helm/app/templates/servicemesh/gateway.yaml
@@ -2,7 +2,7 @@ kind: Gateway
 apiVersion: networking.istio.io/v1beta1
 metadata:
   name: ${{ values.component_id }}-dev-gateway
-  namespace: ${{ values.component_id }}-dev
+  namespace: {{ .Values.namespace.name }}
 spec:
   servers:
     - port:
@@ -13,4 +13,3 @@ spec:
         - '*'
   selector:
     app: istio-ingressgateway
-status: {}
