--- a/templates/github/spring-boot-backend/template.yaml
+++ b/templates/github/spring-boot-backend/template.yaml
@@ -13,7 +13,7 @@ metadata:
     - argocd-gitops
     - azure-repos
 spec:
-  owner: janus-authors
+  owner: user:user1
   system: janus-idp
   type: service
 
