--- a/templates/github/spring-boot-backend/manifests/helm/servicemesh/templates/gateway.yaml
+++ b/templates/github/spring-boot-backend/manifests/helm/servicemesh/templates/gateway.yaml
@@ -12,4 +12,4 @@ spec:
       hosts:
         - '*'
   selector:
-    istio: ${{ values.component_id }}
+    istio: ${{ values.component_id }}-dev-gateway
